--- a/home.html
+++ b/home.html
@@ -10,6 +10,13 @@
 		<H1>Sean Mills, Student</H1>
 		<div id="topnav">
 		<ul>
+		  <li> <a href="home.html"> Home		</a>
+		  <li> <a href="courses.html"> Courses		</a>
+		  <li> <a href="projects.html"> Projects	</a>
+		  <li> <a href="hobby.html"> Hobby		</a>
+		  <li> <a href="friends.html"> Friends		</a>
+		</ul>
+		</div>
 	</div>
 </div>
 </body>
