--- a/App Dev Project 3/courses.html
+++ b/App Dev Project 3/courses.html
@@ -23,23 +23,18 @@
 		</div>
 	</div>
 	<div class="contents">
-		<img class="slideshow" src="homepic.jpg">
-		<img class="slideshow" src="coursepic.jpg">
-		<img class="slideshow" src="projectpic.jpg">	
-		<img class="slideshow" src="hobbypic.jpg">
-		<img class="slideshow" src="friendspic.jpg">
-		<script> 
-			var index = 0;
-			slideFunc(); 
-		</script>
+		<img src="coursepic.jpg">
 		<div class="info">
 			<div class="subhead">
-				<H1 id="subhead">Sean Mills</H1>
+				<H1 id="subhead">My Courses</H1>
 			</div>
-			<p> <b>Title:</b> Student <br>
-			    I am a sophomore Computer Science major from Kingston Jamaica. <br>
-			    <b>Email:</b> <a href="mailto:sean.mills@bison.howard.edu"> sean.mills@bison.howard.edu</a>
-			</p>
+			<ul id="courselist">
+				<li> Computer Science II		
+		  		<li> Intro to Mobile App Development
+		  		<li> Intro to Linear Algebra
+		  		<li> Technical Writing
+		  		<li> Computer Organization I
+			</ul>
 		</div>
 	</div>
 </body>
