--- a/App Dev Project 3/projects.html
+++ b/App Dev Project 3/projects.html
@@ -9,7 +9,7 @@
 	
 </head>
 <body>
-	<!-- <script> setTimeout(homeTimeout, 30000); </script> -->
+	<!-- <script> setTimeout(projectsTimeout, 30000); </script> -->
 	<div class="header">
 		<H1 id="mainhead">Sean Mills, Student</H1>
 		<div id="topnav">
@@ -23,22 +23,13 @@
 		</div>
 	</div>
 	<div class="contents">
-		<img class="slideshow" src="homepic.jpg">
-		<img class="slideshow" src="coursepic.jpg">
-		<img class="slideshow" src="projectpic.jpg">	
-		<img class="slideshow" src="hobbypic.jpg">
-		<img class="slideshow" src="friendspic.jpg">
-		<script> 
-			var index = 0;
-			slideFunc(); 
-		</script>
+		<img src="projectpic.jpg">	
 		<div class="info">
 			<div class="subhead">
-				<H1 id="subhead">Sean Mills</H1>
+				<H1 id="subhead">My Projects</H1>
 			</div>
-			<p> <b>Title:</b> Student <br>
-			    I am a sophomore Computer Science major from Kingston Jamaica. <br>
-			    <b>Email:</b> <a href="mailto:sean.mills@bison.howard.edu"> sean.mills@bison.howard.edu</a>
+			<p> This is my only project at the moment. <br>
+				Check out my repository on <a href="https://github.com/Sean-HU/Project-3"> GitHub</a> to view it.
 			</p>
 		</div>
 	</div>
