--- a/App Dev Project 3/courses.html
+++ b/App Dev Project 3/courses.html
@@ -9,7 +9,8 @@
 	
 </head>
 <body>
-	<!-- <script> setTimeout(homeTimeout, 30000); </script> -->
+	<body onkeydown="keyPressedCourses(event)">
+	<script> var timeoutReset = window.setTimeout(coursesTimeout, 30000); </script>
 	<div class="header">
 		<H1 id="mainhead">Sean Mills, Student</H1>
 		<div id="topnav">
