--- a/App Dev Project 3/friends.html
+++ b/App Dev Project 3/friends.html
@@ -9,8 +9,8 @@
 	
 </head>
 <body>
-	<body onkeydown="keyPressedProjects(event)">
-	<script> var timeoutReset = window.setTimeout(projectsTimeout, 30000); </script>
+	<body onkeydown="keyPressedFriends(event)">
+	<script> var timeoutReset = window.setTimeout(friendsTimeout, 30000); </script>
 	<div class="header">
 		<H1 id="mainhead">Sean Mills, Student</H1>
 		<div id="topnav">
@@ -24,13 +24,13 @@
 		</div>
 	</div>
 	<div class="contents">
-		<img src="projectpic.jpg">	
+		<img src="friendspic.jpg">
 		<div class="info">
 			<div class="subhead">
-				<H1 id="subhead">My Projects</H1>
+				<H1 id="subhead">My Friends</H1>
 			</div>
-			<p> This is my only project at the moment. <br>
-				Check out my repository on <a href="https://github.com/Sean-HU/Project-3"> GitHub</a> to view it.
+			<p> To know who my friends are check my <a href="https://www.facebook.com/crzysean/friends?lst=100003823209895%3A100003823209895%3A1508177615&source_ref=pb_friends_tl"> 
+				friends list</a> on facebook.
 			</p>
 		</div>
 	</div>
