--- a/App Dev Project 3/hobby.html
+++ b/App Dev Project 3/hobby.html
@@ -9,8 +9,8 @@
 	
 </head>
 <body>
-	<body onkeydown="keyPressedProjects(event)">
-	<script> var timeoutReset = window.setTimeout(projectsTimeout, 30000); </script>
+	<body onkeydown="keyPressedHobby(event)">
+	<script> var timeoutReset = window.setTimeout(hobbyTimeout, 30000); </script>
 	<div class="header">
 		<H1 id="mainhead">Sean Mills, Student</H1>
 		<div id="topnav">
@@ -24,13 +24,12 @@
 		</div>
 	</div>
 	<div class="contents">
-		<img src="projectpic.jpg">	
+		<img src="hobbypic.jpg">
 		<div class="info">
 			<div class="subhead">
-				<H1 id="subhead">My Projects</H1>
+				<H1 id="subhead">My Hobbies</H1>
 			</div>
-			<p> This is my only project at the moment. <br>
-				Check out my repository on <a href="https://github.com/Sean-HU/Project-3"> GitHub</a> to view it.
+			<p> My hobbies include playing video games and playing tennis.
 			</p>
 		</div>
 	</div>
